--- a/Breaking/app/src/main/res/layout/item_post_list.xml
+++ b/Breaking/app/src/main/res/layout/item_post_list.xml
@@ -157,10 +157,33 @@
         app:layout_constraintBottom_toBottomOf="@id/imgv_post_thumbnail"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/tv_chip_unsold_main"
-        app:layout_constraintRight_toLeftOf="@id/img_btn_post_like"
+        app:layout_constraintRight_toLeftOf="@id/tv_chip_hidden_main"
         app:layout_constraintTop_toBottomOf="@id/tv_post_price"
         app:layout_constraintVertical_bias="1" />
 
+    <TextView
+        android:id="@+id/tv_chip_hidden_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/chip_post_hidden_background"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="6dp"
+        android:gravity="center"
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="2dp"
+        android:text="@string/sold_hidden_string"
+        android:textColor="@color/white"
+        android:textSize="8.5sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/imgv_post_thumbnail"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toRightOf="@id/tv_chip_sold_stop_main"
+        app:layout_constraintRight_toLeftOf="@id/img_btn_post_like"
+        app:layout_constraintTop_toBottomOf="@id/tv_post_price"
+        app:layout_constraintVertical_bias="1" />
 
     <TextView
         android:id="@+id/tv_post_nickname"
