--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -30,5 +30,6 @@
     <color name="page_number_enable_false_color">#C8C3C3</color>
     <color name="post_chip_exclusive_color">#777777</color>
     <color name="post_chip_sold_color">#B48F8F</color>
+    <color name="post_chip_hidden_color">#6527D3</color>
     <color name="search_background_color">#F4F4F4</color>
 </resources>
