--- a/Breaking/app/src/main/res/layout/item_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_comment_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/constraint_view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,6 +30,7 @@
         android:text="만두피"
         android:textColor="@color/black"
         android:textSize="14.5sp"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
         app:layout_constraintRight_toRightOf="parent"
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:textSize="12sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname"
         app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname"
         app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname"/>
@@ -50,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
+        android:visibility="visible"
         android:ellipsize="end"
         android:maxLines="2"
         android:text="코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
@@ -60,6 +64,22 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
 
+    <EditText
+        android:id="@+id/et_comment_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile" />
+
     <ImageButton
         android:id="@+id/ib_post_like"
         android:layout_width="0dp"
@@ -68,6 +88,7 @@
         app:layout_constraintDimensionRatio="1:1"
         android:layout_marginTop="5dp"
         android:background="@drawable/ic_post_like"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +101,7 @@
         android:text="9,999"
         android:textColor="@color/black"
         android:textSize="13sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
         app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
@@ -93,6 +115,7 @@
         android:text="답글"
         android:textColor="@color/black"
         android:textSize="13sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
         app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count"
@@ -100,9 +123,10 @@
         app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
     <ImageButton
-        android:id="@+id/ib_post_more"
+        android:id="@+id/ib_post_more_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:background="@drawable/ic_baseline_more_horiz_24"
         app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
         app:layout_constraintHorizontal_bias="0.85"
@@ -119,11 +143,43 @@
         android:text="답글 더보기"
         android:textColor="@color/breaking_color"
         android:textSize="12sp"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="@+id/ib_post_like"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ib_post_like"
         app:layout_constraintVertical_bias="0.4" />
+
+    <TextView
+        android:id="@+id/tv_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="취소"
+        android:textSize="12sp"
+        android:textColor="@color/breaking_color"
+        android:visibility="gone"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintTop_toBottomOf="@+id/et_comment_content"
+        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
+        app:layout_constraintLeft_toLeftOf="@+id/et_comment_content"
+        app:layout_constraintRight_toLeftOf="@+id/tv_register" />
+
+    <TextView
+        android:id="@+id/tv_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="등록"
+        android:textSize="12sp"
+        android:textColor="@color/breaking_color"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintTop_toTopOf="@+id/tv_cancel"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
+        app:layout_constraintLeft_toRightOf="@+id/tv_cancel"
+        app:layout_constraintRight_toRightOf="@+id/et_comment_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_nested_comment_list"
@@ -131,7 +187,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
