--- a/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/constraint_view_nested"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,6 +31,7 @@
         android:text="만두피"
         android:textColor="@color/black"
         android:textSize="13.5sp"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile_nested"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:textSize="10sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname_nested"
         app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname_nested"
         app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname_nested"/>
@@ -56,11 +59,28 @@
         android:textSize="11.5sp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:visibility="visible"
         app:layout_constraintWidth_percent="0.57"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname_nested"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname_nested" />
+
+    <EditText
+        android:id="@+id/et_comment_content_nested"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintWidth_percent="0.65"
+        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile_nested"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile_nested" />
 
     <ImageButton
         android:id="@+id/ib_post_like_nested"
@@ -69,6 +89,7 @@
         app:layout_constraintWidth_percent="0.04"
         android:layout_marginTop="5dp"
         android:background="@drawable/ic_post_like"
+        android:visibility="visible"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content_nested"
@@ -83,6 +104,7 @@
         android:text="9,999"
         android:textColor="@color/black"
         android:textSize="12sp"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
         app:layout_constraintBottom_toBottomOf="@+id/ib_post_like_nested"
@@ -90,26 +112,45 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_post_reply_nested"
+        android:id="@+id/tv_cancel_nested"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="답글"
-        android:textColor="@color/black"
+        android:text="취소"
+        android:textSize="12sp"
+        android:textColor="@color/breaking_color"
         android:visibility="gone"
-        app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
-        app:layout_constraintBottom_toBottomOf="@+id/ib_post_like_nested"
-        app:layout_constraintLeft_toRightOf="@+id/tv_post_like_count_nested"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintTop_toBottomOf="@+id/et_comment_content_nested"
+        app:layout_constraintLeft_toLeftOf="@+id/et_comment_content_nested"
+        app:layout_constraintRight_toLeftOf="@+id/tv_register_nested" />
+
+    <TextView
+        android:id="@+id/tv_register_nested"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="등록"
+        android:textSize="12sp"
+        android:textColor="@color/breaking_color"
+        android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintTop_toTopOf="@+id/tv_cancel_nested"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_cancel_nested"
+        app:layout_constraintLeft_toRightOf="@+id/tv_cancel_nested"
+        app:layout_constraintRight_toRightOf="@+id/et_comment_content_nested" />
+
 
     <ImageButton
         android:id="@+id/ib_post_more_nested"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_baseline_more_horiz_24"
+        android:visibility="visible"
         app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
         app:layout_constraintBottom_toBottomOf="@id/ib_post_like_nested"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintLeft_toRightOf="@id/tv_post_reply_nested"
+        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintLeft_toRightOf="@id/tv_post_like_count_nested"
         app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
