--- a/Breaking/app/src/main/res/layout/activity_main.xml
+++ b/Breaking/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,11 @@
             android:id="@+id/bnv_main"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:itemBackground="@color/breaking_color"
+            app:itemBackground="@color/white"
             app:itemIconTint="@drawable/bottom_icon_color"
-            app:itemTextColor="@color/white"
+            app:itemIconSize="21dp"
+            app:itemTextColor="@drawable/bottom_icon_color"
+            android:elevation="4dp"
             app:labelVisibilityMode="labeled"
             app:layout_constraintTop_toBottomOf="@id/fl_board"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +42,5 @@
             app:menu="@menu/navi_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
