--- a/Breaking/app/src/main/res/layout/item_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_comment_list.xml
@@ -1,68 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/constraint_view"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/constraint_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/iv_comment_profile"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
-        app:layout_constraintWidth_percent="0.13"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/tv_comment_nickname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="만두피"
-        android:textColor="@color/black"
-        android:textSize="14.5sp"
-        android:visibility="visible"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile" />
-
-    <TextView
-        android:id="@+id/tv_post_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:textSize="12sp"
-        android:visibility="visible"
-        app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname"
-        app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname"/>
-
-    <TextView
-        android:id="@+id/tv_comment_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:visibility="visible"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
 
     <EditText
         android:id="@+id/et_comment_content"
@@ -75,24 +17,93 @@
         android:textSize="12sp"
         android:visibility="gone"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintWidth_percent="0.7"
         app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile" />
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile"
+        app:layout_constraintWidth_percent="0.7" />
 
     <ImageButton
         android:id="@+id/ib_post_like"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.05"
-        app:layout_constraintDimensionRatio="1:1"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="13dp"
         android:background="@drawable/ic_post_like"
         android:visibility="visible"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="@+id/tv_comment_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_comment_content" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_comment_content"
+        app:layout_constraintWidth_percent="0.05" />
+
+    <ImageButton
+        android:id="@+id/ib_post_more_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_more_horiz_24"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
+
+    <ImageView
+        android:id="@+id/iv_comment_profile"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_margin="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintWidth_percent="0.14"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tv_comment_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="만두피"
+        android:textColor="@color/black"
+        android:textSize="14.5sp"
+        android:visibility="visible"
+        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintLeft_toRightOf="@+id/iv_comment_profile"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_comment_profile" />
+
+    <TextView
+        android:id="@+id/tv_post_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="11.5sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname" />
+
+    <TextView
+        android:id="@+id/tv_comment_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_comment_nickname"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_comment_nickname" />
 
     <TextView
         android:id="@+id/tv_post_like_count"
@@ -100,10 +111,10 @@
         android:layout_height="wrap_content"
         android:text="9,999"
         android:textColor="@color/black"
-        android:textSize="13sp"
+        android:textSize="12sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
-        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintLeft_toRightOf="@+id/ib_post_like"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
@@ -114,7 +125,7 @@
         android:layout_height="wrap_content"
         android:text="답글"
         android:textColor="@color/black"
-        android:textSize="13sp"
+        android:textSize="12sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/ib_post_like"
         app:layout_constraintHorizontal_bias="0.13"
@@ -122,23 +133,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
 
-    <ImageButton
-        android:id="@+id/ib_post_more_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:background="@drawable/ic_baseline_more_horiz_24"
-        app:layout_constraintBottom_toBottomOf="@id/ib_post_like"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintLeft_toRightOf="@id/tv_post_reply"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ib_post_like" />
-
     <TextView
         android:id="@+id/tv_post_reply_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="15dp"
         android:text="답글 더보기"
         android:textColor="@color/breaking_color"
@@ -154,32 +153,32 @@
         android:id="@+id/tv_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="취소"
-        android:textSize="12sp"
-        android:textColor="@color/breaking_color"
-        android:visibility="gone"
         android:layout_marginTop="5dp"
         android:layout_marginRight="15dp"
+        android:text="취소"
+        android:textColor="@color/breaking_color"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintTop_toBottomOf="@+id/et_comment_content"
-        app:layout_constraintBottom_toTopOf="@+id/rv_nested_comment_list"
         app:layout_constraintLeft_toLeftOf="@+id/et_comment_content"
-        app:layout_constraintRight_toLeftOf="@+id/tv_register" />
+        app:layout_constraintRight_toLeftOf="@+id/tv_register"
+        app:layout_constraintTop_toBottomOf="@+id/et_comment_content" />
 
     <TextView
         android:id="@+id/tv_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="등록"
-        android:textSize="12sp"
         android:textColor="@color/breaking_color"
+        android:textSize="12sp"
         android:visibility="gone"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintTop_toTopOf="@+id/tv_cancel"
         app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@+id/tv_cancel"
-        app:layout_constraintRight_toRightOf="@+id/et_comment_content" />
+        app:layout_constraintRight_toRightOf="@+id/et_comment_content"
+        app:layout_constraintTop_toTopOf="@+id/tv_cancel" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_nested_comment_list"
