--- a/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
+++ b/Breaking/app/src/main/res/layout/item_nested_comment_list.xml
@@ -10,17 +10,17 @@
     <ImageView
         android:id="@+id/iv_comment_profile_nested"
         android:layout_width="0dp"
+        android:layout_margin="2dp"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
-        android:layout_marginTop="10dp"
-        app:layout_constraintHorizontal_bias="0.18"
-        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintVertical_bias="0.15"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintWidth_percent="0.1"
+        app:layout_constraintWidth_percent="0.11"
         app:layout_constraintHeight_percent="0.45"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -41,9 +41,10 @@
         android:id="@+id/tv_post_time_nested"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:textSize="10sp"
         android:visibility="visible"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintLeft_toRightOf="@+id/tv_comment_nickname_nested"
         app:layout_constraintTop_toTopOf="@+id/tv_comment_nickname_nested"
         app:layout_constraintBottom_toBottomOf="@+id/tv_comment_nickname_nested"/>
@@ -54,6 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
         android:text="코로나 사태가 아직 진정이 되지 않았는데, 다시 확산이 될까봐 무섭네요 ㅠㅠ네요 ㅠㅠ네요코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데, 코로나 사태가 아직 진정이 되지 않았는데,  ㅠㅠ네요 ㅠㅠ네요 ㅠㅠ네요 네요 ㅠㅠ네요 ㅠㅠㅠㅠ"
         android:textColor="@color/black"
         android:textSize="11.5sp"
@@ -87,7 +89,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.04"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/ic_post_like"
         android:visibility="visible"
         app:layout_constraintDimensionRatio="1:1"
@@ -150,7 +152,7 @@
         android:visibility="visible"
         app:layout_constraintTop_toTopOf="@+id/ib_post_like_nested"
         app:layout_constraintBottom_toBottomOf="@id/ib_post_like_nested"
-        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintLeft_toRightOf="@id/tv_post_like_count_nested"
         app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
